geology input changed to radio buttons

--- a/index.html
+++ b/index.html
@@ -19,10 +19,17 @@
       <input type="text" id="area" required>
     </div>
 
+    <p>Select main rock type of hill:</p>
+
     <div class="form-el">
-      <label for="geology">Geology</label>
-      <input type="text" id="geology">
+      <label for="metamorpic">Metamorphic</label>
+      <input type="radio" name="geology" id="metamorphic" value="Metamorphic">
+      <label for="sedimentary">Sedimentary</label>
+      <input type="radio" name="geology" id="sedimentary" value="Sedimentary">
+      <label for="volcanic">Volcanic</label>
+      <input type="radio" name="geology" id="volcanic" value="Volcanic">
     </div>
+
   </div>
   <input type="submit" value="save">
 </form>
